validation bug fixed.

--- a/src/app/app-shell/basic-info/personnel/personnel.component.html
+++ b/src/app/app-shell/basic-info/personnel/personnel.component.html
@@ -41,11 +41,8 @@
         <custom-input label="نام خانوادگی" formControlName="family" identity="family" size="col-12" [required]="true">
         </custom-input>
 
-        <!-- 
-        <custom-select [options]="salons" formControlName="salonGuid" identity="salonGuid" label="فعال در واحد"
-            size="col-12" [required]="true"></custom-select>
- -->
-
+        <custom-input label="کد ملی" formControlName="nationalCode" identity="nationalCode" size="col-12" type="number">
+        </custom-input>
 
         <div class="mb-1 mt-1">
             <label class="sr-only" for="salonGuid">فعال در واحد</label>
