--- a/src/app/app-shell/basic-info/reports/activity-chart-report/activity-chart-report.component.html
+++ b/src/app/app-shell/basic-info/reports/activity-chart-report/activity-chart-report.component.html
@@ -6,32 +6,46 @@
 
                 <div class="form-group row">
                     <div class="col-3">
+                        <ng-select formControlName="salonGuid" class="my-2" placeholder="انتخاب واحد">
+                            <ng-option [value]="item.guid" *ngFor="let item of salons">{{item.title}}</ng-option>
+                        </ng-select>
+                    </div>
+
+                    <div class="col-3">
                         <ng-select formControlName="yearIds" class="mt-2" placeholder="انتخاب سال">
                             <ng-option [value]="item.id" *ngFor="let item of years">{{item.name}}</ng-option>
                         </ng-select>
                     </div>
 
-                    <div class="col-3">
-                        <ng-select formControlName="monthId" class="my-2" placeholder="انتخاب ماه">
-                            <ng-option [value]="item.id" *ngFor="let item of months">{{item.name}}</ng-option>
-                        </ng-select>
-                    </div>
+                    <ng-container *ngIf="type!= 3">
+                        <div class="col-3">
+                            <ng-select formControlName="monthIds" class="my-2" placeholder="انتخاب ماه"
+                                [multiple]="true">
+                                <ng-option [value]="item.id" *ngFor="let item of months">{{item.name}}</ng-option>
+                            </ng-select>
+                        </div>
+                    </ng-container>
 
-                    <div class="col-3">
-                        <ng-select formControlName="weekId" class="my-2" placeholder="انتخاب هفته">
-                            <ng-option [value]="item.id" *ngFor="let item of weeks">{{item.name}}</ng-option>
-                        </ng-select>
-                    </div>
+                    <ng-container *ngIf="type!=4">
+                        <div class="col-3">
+                            <ng-select formControlName="weekIds" class="my-2" placeholder="انتخاب هفته"
+                                [multiple]="true">
+                                <ng-option [value]="item.id" *ngFor="let item of weeks">{{item.name}}</ng-option>
+                            </ng-select>
+                        </div>
+                    </ng-container>
 
-                    <div class="col-3">
-                        <input class="form-control my-2" id="fromDate" formControlName="fromDate" autocomplete="off"
-                            appDateMask [input]="getFormValue(form, 'fromDate')" placeholder="از تاریخ" data-date>
-                    </div>
+                    <ng-container *ngIf="type!= 3 && type!= 4">
+                        <div class="col-3">
+                            <input class="form-control my-2" id="fromDate" formControlName="fromDate" autocomplete="off"
+                                appDateMask [input]="getFormValue(form, 'fromDate')" placeholder="از تاریخ" data-date>
+                        </div>
 
-                    <div class="col-3">
-                        <input class="form-control my-2" id="toDate" formControlName="toDate" autocomplete="off" appDateMask
-                            [input]="getFormValue(form, 'toDate')" placeholder="تا تاریخ" data-date>
-                    </div>
+                        <div class="col-3">
+                            <input class="form-control my-2" id="toDate" formControlName="toDate" autocomplete="off"
+                                appDateMask [input]="getFormValue(form, 'toDate')" placeholder="تا تاریخ" data-date>
+                        </div>
+                    </ng-container>
 
                     <div class="col-3">
                         <ng-select formControlName="activitySubType" class="my-2" placeholder="نوع فعالیت / توقف">
