--- a/src/app/app-shell/dashboard/dashboard.component.html
+++ b/src/app/app-shell/dashboard/dashboard.component.html
@@ -4,14 +4,14 @@
     <div class="row">
 
       <ng-container *ngFor="let item of salons">
-        <div class="col-xl-3 col-md-6" (click)="onSalonClicked(item.id)" style="cursor: pointer;">
+        <div class="col-xl-3 col-md-6" (click)="onSalonClicked(item)" style="cursor: pointer;">
           <div class="card">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
 
                 <div class="text-end">
-                  <h3 class="mb-1 mt-0"> %{{item.randeman}} </h3>
-                  <p class="text-muted mb-0">راندمان واحد {{item.name}}</p>
+                  <h3 class="mb-1 mt-0"> راندمان: %{{item.randeman}} </h3>
+                  <p class="text-muted mb-0"> {{item.name}}</p>
                 </div>
 
                 <img src="../assets/images/robotic.svg" class="w-25" />
@@ -24,7 +24,7 @@
 
     </div>
 
-    <ng-container *ngIf="salonId">
+    <ng-container *ngIf="salon">
       <div class="row">
         <div class="col-xl-4">
           <div class="card">
@@ -39,12 +39,12 @@
               </h4>
               <div class="mt-3 text-center" dir="ltr">
 
-                <div id="stop-chart" class="apex-charts" data-colors="6559cc,#4e5995,#9ba3d9,#e3eaef"></div>
+                <div id="stop-chart" class="apex-charts" data-colors="#FFA500,#136a37,#D4AF37,#e3eaef"></div>
 
                 <div class="row mt-3">
                   <div class="col-4" *ngFor="let item of stopChartResult">
                     <p class="text-muted font-15 mb-1 text-truncate">{{item.name}}</p>
-                    <h4>{{item.value}}</h4>
+                    <h4>{{item.value}}%</h4>
                   </div>
                 </div>
 
@@ -99,7 +99,7 @@
           <div class="card">
             <div class="card-body">
 
-              <h4 class="header-title mb-3">پروژه های فعال</h4>
+              <h4 class="header-title mb-3">پروژه های فعال {{salon.name}}</h4>
 
               <div class="table-responsive">
                 <table class="table table-borderless table-hover table-centered m-0">
@@ -108,8 +108,9 @@
                     <tr>
                       <th>کد پروژه</th>
                       <th>عنوان پروژه</th>
-                      <th>واحد</th>
+                      <!-- <th>واحد</th> -->
                       <th>نام کارفرما</th>
+                      <th>تاریخ شروع</th>
                       <th>تاریخ تحویل</th>
                       <th>درصد پیشرفت</th>
                     </tr>
@@ -118,8 +119,9 @@
                     <tr *ngFor="let item of activeProjects">
                       <td> {{item.code}} </td>
                       <td> {{item.name}} </td>
-                      <td> {{item.salon}} </td>
+                      <!-- <td> {{item.salon}} </td> -->
                       <td> {{item.taskMaster}} </td>
+                      <td> {{item.startDate}} </td>
                       <td> {{item.deliveryDate}} </td>
                       <td>
                         <div class="progress mb-0">
@@ -141,7 +143,15 @@
           <div class="card">
             <div class="card-body">
 
-              <h4 class="header-title mb-3">گروه محصولات</h4>
+              <h4 class="header-title d-flex align-items-center justify-content-between mb-3">
+                گروه محصولات {{salon.name}}
+
+                <div class="button-list">
+                  <button type="button" class="btn btn-light" (click)="getProductCategory(1)">هفتگی</button>
+                  <button type="button" class="btn btn-light" (click)="getProductCategory(2)">ماهانه</button>
+                  <button type="button" class="btn btn-light" (click)="getProductCategory(3)">سالانه</button>
+                </div>
+              </h4>
 
               <div class="table-responsive">
                 <table class="table table-borderless table-hover table-centered m-0">
@@ -153,7 +163,7 @@
                       <th>ساعت در اختیار به کل</th>
                       <th>میزان مصرف سیم جوش (kg)</th>
                       <th>میزان مصرف سیم کل</th>
-                      <th>زاندمان</th>
+                      <th>راندمان</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -163,7 +173,7 @@
                       <td> {{item.value2}} </td>
                       <td> {{item.value3}} </td>
                       <td> {{item.value4}} </td>
-                      <td> {{item.value5}} </td>
+                      <td> {{item.value5}}% </td>
                     </tr>
                   </tbody>
                 </table>
