--- a/src/app/app-shell/basic-info/reports/final-card-project-report/final-card-project-report.component.html
+++ b/src/app/app-shell/basic-info/reports/final-card-project-report/final-card-project-report.component.html
@@ -5,15 +5,13 @@
             <div class="card-body">
                 <div class="form-group row" [formGroup]="form">
                     <div class="col-4">
-                        <ng-select (ngModelChange)="onProjectGuidChange()" formControlName="projectGuid" class="mt-1"
-                            placeholder="انتخاب پروژه">
+                        <ng-select formControlName="projectGuid" class="mt-1" placeholder="انتخاب پروژه">
                             <ng-option [value]="item.guid" *ngFor="let item of projects">{{item.title}}</ng-option>
                         </ng-select>
                     </div>
 
                     <div class="col-4">
-                        <ng-select (ngModelChange)="onPartTypeGuidChange()" formControlName="partGuid" class="mt-1"
-                            placeholder="انتخاب گروه/نوع قطعه">
+                        <ng-select formControlName="partGuid" class="mt-1" placeholder="انتخاب گروه/نوع قطعه">
                             <ng-option [value]="item.guid" *ngFor="let item of partTypes">{{item.title}}</ng-option>
                         </ng-select>
                     </div>
