--- a/src/app/app-shell/dashboard/dashboard.component.html
+++ b/src/app/app-shell/dashboard/dashboard.component.html
@@ -66,7 +66,7 @@
               </h4>
               <div class="mt-3 text-center">
                 <div dir="ltr">
-                  <div id="wire-consumption" class="apex-charts" data-colors="#6559cc,#4e5995"></div>
+                  <div id="wire-consumption123" class="apex-charts"></div>
                 </div>
               </div>
             </div>
