--- a/src/app/app-shell/sidebar/sidebar.component.html
+++ b/src/app/app-shell/sidebar/sidebar.component.html
@@ -52,10 +52,14 @@
               <h5 class="menu-title">میزکار</h5>
               <ul class="nav flex-column">
                 <li class="nav-item">
-                  <a class="nav-link" routerLinkActive="router-link-active" (click)="onDashboardClicked('2C00A88D-EDEC-4C84-95DD-F2E8CD675681')"
-                      style="cursor: pointer;">
-                      واحدهای جوشکاری
-                    </a>
+                  <a class="nav-link" routerLinkActive="router-link-active"
+                    (click)="onDashboardClicked('2C00A88D-EDEC-4C84-95DD-F2E8CD675681')" style="cursor: pointer;">
+                    واحدهای جوشکاری
+                  </a>
+                  <a class="nav-link" routerLinkActive="router-link-active"
+                    (click)="onDashboardClicked('95831352-128C-4033-AE85-C27C6D35C2E5')" style="cursor: pointer;">
+                    واحدهای تولیدی
+                  </a>
                   <!-- <ng-container *ngFor="let item of salonTypes">
                     <a class="nav-link" routerLinkActive="router-link-active" (click)="onDashboardClicked(item.guid)"
                       style="cursor: pointer;">
