--- a/src/app/app-shell/basic-info/reports/wire-consumption-chart-report/wire-consumption-chart-report.component.html
+++ b/src/app/app-shell/basic-info/reports/wire-consumption-chart-report/wire-consumption-chart-report.component.html
@@ -113,7 +113,7 @@
 
             <div class="card-body">
                 <div dir="ltr">
-                    <div id="report" class="apex-charts" data-colors="#1abc9c,#e3eaef"></div>
+                    <div id="report" class="apex-charts"></div>
                 </div>
             </div>
 
