--- a/src/app/app-shell/framework-components/ag-grid-tools/ag-grid-tools.component.html
+++ b/src/app/app-shell/framework-components/ag-grid-tools/ag-grid-tools.component.html
@@ -1,20 +1,11 @@
-<div class="btn-group">
-    <button type="button" class="btn btn-outline-secondary waves-effect waves-light m-1" data-toggle="dropdown"
-        aria-expanded="false"> ابزار جدول
-        <span *ngIf="hasSavedState">(شخصی شده)</span>
-        <span class="btn-label"><i class="fas fa-cog"></i></span>
-    </button>
-    <div class="dropdown-menu">
-        <ng-container *hasPermission="[exportPermission]">
-            <button class="dropdown-item" type="button" (click)="onExportExcel()"> Excel دریافت خروجی <i
-                    class="fas fa-file-excel"></i></button>
-            <button class="dropdown-item" type="button" (click)="onExportCSV()"> CSV دریافت خروجی <i
-                    class="fas fa-file-csv"></i></button>
-            <hr class="mt-1 mb-1" />
-        </ng-container>
-        <button class="dropdown-item" type="button" (click)="saveState()"> ذخیره حالت جدول <i
-                class="fas fa-save"></i></button>
-        <button class="dropdown-item" type="button" (click)="resetState()"> برگشت جدول به حالت پیش فرض
-            <i class="fas fa-redo"></i></button>
-    </div>
-</div>
+<app-label-icon-button btnType="button" identifier="submitBtn" label="Excel دریافت"
+    className="btn btn-outline-secondary" icon="fas fa-file-excel" (click)="onExportExcel()">
+</app-label-icon-button>
+
+<app-label-icon-button *ngIf="hasSavedState" btnType="button" identifier="restoreStateBtn"
+    label="برگشت جدول به حالت پیش فرض" className="btn btn-outline-secondary" icon="fas fa-save" (click)="resetState()">
+</app-label-icon-button>
+
+<app-label-icon-button *ngIf="!hasSavedState" btnType="button" identifier="saveStateBtn" label="ذخیره حالت جدول"
+    className="btn btn-outline-secondary" icon="fas fa-save" (click)="saveState()">
+</app-label-icon-button>
